--- a/package.json
+++ b/package.json
@@ -26,25 +26,27 @@
     "@angular-devkit/build-angular": "^19.2.15",
     "@angular/cli": "^19.2.15",
     "@angular/compiler-cli": "^19.2.0",
+    "@angular/testing": "^0.0.0-0",
     "@compodoc/compodoc": "^1.1.26",
-    "@storybook/addon-a11y": "^8.0.0",
-    "@storybook/addon-controls": "^8.0.0",
-    "@storybook/addon-docs": "^8.0.0",
-    "@storybook/addon-essentials": "^8.0.0",
-    "@storybook/addon-storysource": "^8.0.0",
-    "@storybook/addon-viewport": "^8.0.0",
-    "@storybook/angular": "^8.0.0",
+    "@storybook/addon-a11y": "^9.0.13",
+    "@storybook/addon-controls": "^9.0.8",
+    "@storybook/addon-docs": "^9.0.13",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-storysource": "^8.6.14",
+    "@storybook/addon-viewport": "^9.0.8",
+    "@storybook/angular": "^9.0.13",
     "@types/d3": "^7.4.0",
     "@types/jasmine": "~5.1.0",
-    "cypress": "^13.0.0",
-    "jasmine": "^5.0.0",
+    "cypress": "^14.5.0",
+    "gh-pages": "^6.3.0",
+    "jasmine": "^5.8.0",
     "jasmine-core": "~5.6.0",
-    "karma": "^6.4.0",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^19.0.0",
-    "typescript": "~5.6.0"
+    "ng-packagr": "^20.0.1",
+    "typescript": "^5.8.3"
   }
 }
