storybook added app is running

--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,36 @@
               "zone.js/testing"
             ]
           }
+        },
+        "storybook": {
+          "builder": "@storybook/angular:start-storybook",
+          "options": {
+            "configDir": "projects/network-viz-lib/.storybook",
+            "browserTarget": "network-viz-lib:build",
+            "compodoc": true,
+            "compodocArgs": [
+              "-e",
+              "json",
+              "-d",
+              "projects/network-viz-lib"
+            ],
+            "port": 6006
+          }
+        },
+        "build-storybook": {
+          "builder": "@storybook/angular:build-storybook",
+          "options": {
+            "configDir": "projects/network-viz-lib/.storybook",
+            "browserTarget": "network-viz-lib:build",
+            "compodoc": true,
+            "compodocArgs": [
+              "-e",
+              "json",
+              "-d",
+              "projects/network-viz-lib"
+            ],
+            "outputDir": "dist/storybook/network-viz-lib"
+          }
         }
       }
     },
