--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "network-viz-library",
   "version": "0.0.0",
-   "scripts": {
+  "scripts": {
     "ng": "ng",
     "start": "ng serve demo-app",
     "build": "ng build network-viz-lib",
@@ -63,6 +63,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^20.0.1",
+    "storybook": "^9.0.13",
     "typescript": "^5.8.3"
   }
 }
