--- a/projects/network-viz-lib/package.json
+++ b/projects/network-viz-lib/package.json
@@ -1,9 +1,32 @@
 {
-  "name": "network-viz-lib",
-  "version": "0.0.1",
+  "name": "@your-org/network-viz-lib",
+  "version": "1.0.0",
+  "description": "Advanced Network Visualization Components for Angular",
+  "keywords": [
+    "angular",
+    "network",
+    "visualization",
+    "d3",
+    "graph",
+    "components",
+    "storybook"
+  ],
+  "homepage": "https://your-org.github.io/network-viz-library",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-org/network-viz-library.git"
+  },
+  "license": "MIT",
+  "author": "Your Organization",
+  "main": "bundles/network-viz-lib.umd.js",
+  "module": "fesm2022/network-viz-lib.mjs",
+  "typings": "index.d.ts",
   "peerDependencies": {
-    "@angular/common": "^19.2.0",
-    "@angular/core": "^19.2.0"
+    "@angular/common": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "d3": "^7.8.5",
+    "rxjs": "^7.8.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
