--- a/package.json
+++ b/package.json
@@ -16,32 +16,35 @@
     "build": "ng build network-viz-lib",
     "build:demo": "ng build demo-app",
     "build:all": "npm run build && npm run build:demo",
+    "build:prod": "ng build network-viz-lib --configuration production",
     "watch": "ng build network-viz-lib --watch --configuration development",
     "test": "ng test",
     "test:lib": "ng test network-viz-lib",
     "test:coverage": "ng test network-viz-lib --code-coverage",
     "test:watch": "ng test network-viz-lib --watch",
     "test:headless": "ng test network-viz-lib --watch=false --browsers=ChromeHeadless",
+    "lint": "ng lint",
     "e2e": "cypress open",
     "e2e:headless": "cypress run",
-    "lint": "ng lint",
+    "clean": "rm -rf dist/ && rm -rf node_modules/.cache/",
+    "clean:install": "npm run clean && npm install",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "deploy-storybook": "storybook build && gh-pages -d storybook-static",
     "docs:generate": "compodoc -p projects/network-viz-lib/tsconfig.lib.json -d docs/api --theme material",
     "docs:serve": "compodoc -p projects/network-viz-lib/tsconfig.lib.json -s -d docs/api",
-    "release": "npm run build && npm publish dist/network-viz-lib",
-    "pack": "npm run build && cd dist/network-viz-lib && npm pack",
-    "benchmark": "ng run demo-app:serve --configuration=benchmark"
+    "pack:lib": "npm run build:prod && cd dist/network-viz-lib && npm pack",
+    "publish:lib": "npm run build:prod && npm publish dist/network-viz-lib",
+    "verify": "npm run clean && npm install && npm run build:prod && npm run test:headless"
   },
   "peerDependencies": {
-    "@angular/common": "^19.2.15",
-    "@angular/core": "^19.2.15",
-    "@angular/platform-browser": "^19.2.15",
+    "@angular/common": "^19.2.0",
+    "@angular/core": "^19.2.0",
+    "@angular/platform-browser": "^19.2.0",
     "d3": "^7.8.5",
     "rxjs": "^7.8.0"
   },
   "dependencies": {
+    "@angular/animations": "^19.2.0",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
@@ -58,20 +61,26 @@
     "@angular-devkit/build-angular": "^19.2.15",
     "@angular/cli": "^19.2.15",
     "@angular/compiler-cli": "^19.2.0",
-    "@angular/testing": "^0.0.0-0",
+    "@angular-eslint/builder": "^18.0.1",
+    "@angular-eslint/eslint-plugin": "^18.0.1",
+    "@angular-eslint/eslint-plugin-template": "^18.0.1",
+    "@angular-eslint/schematics": "^18.0.1",
+    "@angular-eslint/template-parser": "^18.0.1",
     "@compodoc/compodoc": "^1.1.26",
-    "@storybook/addon-a11y": "^9.0.13",
-    "@storybook/addon-controls": "^9.0.8",
-    "@storybook/addon-docs": "^9.0.13",
+    "@storybook/addon-a11y": "^8.6.14",
+    "@storybook/addon-controls": "^8.6.14",
+    "@storybook/addon-docs": "^8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-storysource": "^8.6.14",
-    "@storybook/addon-viewport": "^9.0.8",
-    "@storybook/angular": "^9.0.13",
+    "@storybook/addon-viewport": "^8.6.14",
+    "@storybook/angular": "^8.6.14",
     "@types/d3": "^7.4.0",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "cypress": "^14.5.0",
-    "d3": "^7.8.5",
+    "eslint": "^9.0.0",
     "gh-pages": "^6.0.0",
     "jasmine": "^5.8.0",
     "jasmine-core": "~5.1.0",
@@ -81,9 +90,14 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^20.0.1",
-    "rxjs": "~7.8.0",
-    "storybook": "^8.0.0",
-    "typescript": "~5.6.0",
-    "zone.js": "~0.15.0"
+    "storybook": "^8.6.14",
+    "typescript": "~5.6.0"
+  },
+  "overrides": {
+    "@types/d3": "^7.4.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
